Fix: shift star icon to right in MemberReputation

--- a/src/modules/core/components/MemberReputation/MemberReputation.css
+++ b/src/modules/core/components/MemberReputation/MemberReputation.css
@@ -9,7 +9,7 @@
 
 .icon {
   display: inline-block;
-  margin-right: 3px;
+  margin-left: 3px;
   height: 11px;
   width: 11px;
 }
